# funnyegg

./: CMakeLists.txt
includes/glad/: glad.c  glad.h
src/: main.cpp
src/renderer/: EBO.cpp  EBO.h  Shader.cpp  Shader.h  Shapes.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h
src/shaders/: shader.frag  shader.vert
